:lipstick: Fix various sizing issues on mobile

--- a/assets/styles/intro.scss
+++ b/assets/styles/intro.scss
@@ -7,4 +7,8 @@
     &__astronaut {
         max-width: 100%;
     }
+
+    form {
+        margin-top: 4rem;
+    }
 }
